--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>Portfolio Diego</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="svg" href="../src/assets/favicon.svg">
+  <link rel="icon" type="svg" href="./src/assets/favicon.svg">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;700;800&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" href="../src/css/style.css">
+  <link rel="stylesheet" href="./src/css/style.css">
 </head>
 
 <body class="bg-gray-800 pb-0 sm:pb-6 ">
