--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;700;800&display=swap"
     rel="stylesheet">
 
-  <link rel="stylesheet" href="./src/css/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body class="bg-gray-800 pb-0 sm:pb-6 ">
